# Loom

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  ORIGINAL_REQUEST.md  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  skills-lock.json
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/storage/: error.rs  manager.rs  mod.rs  models.rs  tests.rs
crates/gui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
crates/gui/frontend/src/: App.tsx  I18nContext.tsx  ToastContext.tsx  api.ts  index.css  main.tsx  types.ts
crates/gui/frontend/src/components/: TerminalTab.tsx
crates/gui/frontend/src/pages/: CategoriesPage.tsx  Dashboard.tsx  EnvVarsPage.tsx  InstancesPage.tsx  ProjectWorkspace.tsx  SettingsPage.tsx  (+1 more)
crates/gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/gui/src-tauri/capabilities/: default.json
crates/gui/src-tauri/icons/: icon.icns
crates/gui/src-tauri/src/: main.rs  pty.rs
e2e/: package.json  pnpm-lock.yaml  vitest.config.ts
e2e/src/: cli.test.ts  gui.test.ts
specs/001-climaster-project/: README.md
specs/002-setup-persistence/: README.md
specs/003-global-cli/: README.md
specs/004-scanner-importer/: README.md
specs/005-categorization-env/: README.md
specs/006-template-process/: README.md
specs/007-gui-dashboard/: README.md
specs/008-validation-hardening/: README.md
specs/009-i18n-localization/: README.md
specs/010-tray-minimize-to-tray/: README.md
specs/012-category-enhancements-fonts/: README.md
