[package]
name = "climaster-gui"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
climaster-core = { path = "../../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
